sample-app/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  annotations:
    cloud.google.com/backend-config: '{"default": "sample-app"}'
  namespace: sample-app
spec:
  selector:
    app: sample-app
    version: v1
  ports:
  - port: 8080
    targetPort: 8080
